// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs - hidden 1`] = `
<div
  className="tabs"
>
  <ul
    className="tab__ul"
  >
    <li
      className="tab tab--active"
      onClick={[Function]}
    >
      How to use this
    </li>
    <li
      className="tab"
      onClick={[Function]}
    >
      What is this
    </li>
    <li
      className="tab"
      onClick={[Function]}
    >
      Get involved
    </li>
  </ul>
</div>
`;

exports[`Tabs - visible 1`] = `
<div
  className="tabs tabs--visible"
>
  <ul
    className="tab__ul"
  >
    <li
      className="tab tab--active"
      onClick={[Function]}
    >
      How to use this
    </li>
    <li
      className="tab"
      onClick={[Function]}
    >
      What is this
    </li>
    <li
      className="tab"
      onClick={[Function]}
    >
      Get involved
    </li>
  </ul>
</div>
`;
